fixed the goddamn horizontal scroll. i hate this drawing. good lord.

--- a/styles/sass/partials/_index-header.scss
+++ b/styles/sass/partials/_index-header.scss
@@ -10,7 +10,6 @@ header {
 
 	.profile-image {
 		height: 450px;
-		width: 100%;
 		position: absolute;
 		bottom: 22%;
 	}
