--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -107,8 +107,9 @@
 
 @media (max-width: 450px) {
   .wrapper {
-    max-width: 500px;
+    max-width: 450px;
   }
+  
   header {
     .profile-image {
       height: 200px;
